--- a/config.json
+++ b/config.json
@@ -1,12 +1,12 @@
 { 
-  "ownerNumber": "6287847070396@s.whatsapp.net",
-   "kontakOwner": "6287847070396",
-  "botName": "XynaBotz",
-  "ownerName": "FaelFilaa",
+  "ownerNumber": "6282261065144@s.whatsapp.net",
+   "kontakOwner": "6282261065144",
+  "botName": "Fin Md",
+  "ownerName": "Fin Ofc",
   "sessionName": "session",
-  "foother": "© XynaBotz 2023",
-  "judulGroup": "XynaBotzYT",
-  "linkGroup": "https://chat.whatsapp.com/Iwngx7s2deGAVQUeoGctux",
+  "foother": "© Fin Md 2023",
+  "judulGroup": "FIN ANIME",
+  "linkGroup": "https://chat.whatsapp.com/BGyvKG4b0Qz2DnGXZTXuAX",
   
   "apikey👉": "https://api.zeeoneofc.my.id/",
   "zeeonekey": "4pP9gmYA",
@@ -15,14 +15,14 @@
   "danzz_api": "ravihdc",
   
 
- "dana": "085718828566",
+ "dana": "081332995497",
  "shopeepay": "-",
- "ovo": "085718828566",
- "gopay": "085718828566",
- "saweria": "https://saweria.co/AraBotz",
+ "ovo": "-",
+ "gopay": "081332995497",
+ "saweria": "https://saweria.co/Rimuru233",
  
  "packname": "By",
- "author": "XynaBotz",
+ "author": "Fin Ofc",
 
   "logoMenu": "./media/thumbnail.jpg",
   "qrisNya": "./media/qris.jpg"
